--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js",
-    "postinstall": "./node_modules/.bin/webpack -p --define process.env.NODE_ENV='\"production\"'"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
