--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "## Tech Stack Node - Express server - Mongo DB - Mongoose",
   "main": "index.js",
+  "engines": {
+    "node": "6.11.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "heroku-postbuild": ""
   },
   "repository": {
     "type": "git",
