renamed server file

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "be-recipe-book-app",
   "version": "1.0.0",
   "description": "## Tech Stack Node - Express server - Mongo DB - Mongoose",
-  "main": "index.js",
+  "main": "server.js",
   "engines": {
-    "node": "6.11.2"
+    "node": "6.11.2",
+    "npm": "3.10.10"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "heroku-postbuild": ""
   },
   "repository": {
